--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand navbar" href="#">Learning English</a>
+  <a class="navbar-brand navbar" href="#">{{ title }}</a>
 </nav>
