--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -12,11 +12,15 @@
     </div>
     <div class="row">
       <div class="col">
-        <h6>Traduza a frase:</h6>
-        <p>How are you?</p>
+        <h6 class="mt-3 mb-3">{{ instruction }}</h6>
+        <p>{{ phrases[2].phraseEng }}</p>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Example textarea</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="3"
+          (input)="refreshAnswer($event)"></textarea>
         </div>
       </div>
     </div>
