--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col">
         <h6 class="mt-3 mb-3">{{ instruction }}</h6>
-        <p>{{ phrases[2].phraseEng }}</p>
+        <p>{{ roundPhrase.phraseEng }}</p>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Example textarea</label>
           <textarea
