--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -15,12 +15,11 @@
         <h6 class="mt-3 mb-3">{{ instruction }}</h6>
         <p>{{ roundPhrase.phraseEng }}</p>
         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Example textarea</label>
           <textarea
           class="form-control"
           id="exampleFormControlTextarea1"
           rows="3"
-          (input)="refreshAnswer($event)"></textarea>
+          (input)="refreshAnswer($event)" [value]='answer'></textarea>
         </div>
       </div>
     </div>
