Show heart with ngFor

--- a/src/app/components/attempts/attempts.component.html
+++ b/src/app/components/attempts/attempts.component.html
@@ -1,3 +1,1 @@
-<img [src]="emptyHeart"/>
-<img [src]="heartFull"/>
-<img [src]="heartFull"/>
+<img *ngFor="let heart of hearts" [src]="heart.showHeart()"/>
