--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,20 @@
 </div>
 
 <ng-template #endGame>
-  <div class="container">
+  <div class="container" *ngIf="finish === 'derrota'; else endOfGameVictory">
     <div class="row">
       <div class="col-lg-12">
         <h3>Infelizmente, você perdeu!</h3>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #endOfGameVictory>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h3>Parabéns! você venceu!</h3>
       </div>
     </div>
   </div>
