--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <div class="row">
       <div class="col-lg-12">
         <h3>Infelizmente, você perdeu!</h3>
+        <button (click)="restartGame()">Jogar novamente</button>
       </div>
     </div>
   </div>
@@ -19,6 +20,7 @@
     <div class="row">
       <div class="col-lg-12">
         <h3>Parabéns! você venceu!</h3>
+        <button (click)="restartGame()">Jogar novamente</button>
       </div>
     </div>
   </div>
