--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,13 @@
 
 <ng-template #endGame>
   <div class="container" *ngIf="finish === 'derrota'; else endOfGameVictory">
-    <div class="row">
-      <div class="col-lg-12">
-        <h3>Infelizmente, você perdeu!</h3>
-        <button (click)="restartGame()">Jogar novamente</button>
+    <div class="jumbotron mt-5">
+      <div class="row">
+        <div class="col-lg-12 mt-2">
+          <h3>Infelizmente, você perdeu! :(</h3>
+          <p>Contudo não desanime, tente novamente, acredite no seu potencial!</p>
+          <button (click)="restartGame()" class="btn btn-success mt-3">Jogar novamente</button>
+        </div>
       </div>
     </div>
   </div>
@@ -17,10 +20,13 @@
 
 <ng-template #endOfGameVictory>
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <h3>Parabéns! você venceu!</h3>
-        <button (click)="restartGame()">Jogar novamente</button>
+    <div class="jumbotron mt-5">
+      <div class="row">
+        <div class="col-lg-12">
+          <h3>Parabéns! você venceu! :)</h3>
+          <p>Tente jogar novamente e busque uma pontuação ainda maior!</p>
+          <button (click)="restartGame()" class="btn btn-success mt-3">Jogar novamente</button>
+        </div>
       </div>
     </div>
   </div>
