--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand navbar mx-auto" href="#">{{ title }} <img src="./../../../assets/game-flag.svg" class="header--flag ml-2" alt="Bandeira Reino Unido"></a>
+  <a class="navbar-brand navbar mx-auto header__title" href="#">{{ title }} <img src="./../../../assets/game-flag.svg" class="header--flag ml-2" alt="Bandeira Reino Unido"></a>
 </nav>
