--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -2,6 +2,7 @@
   <div class="jumbotron mt-5">
     <div class="row">
       <div class="col-sm-6">
+        <h5 class="mb-3">Let's Play!</h5>
         <app-progress [progress]="progress"></app-progress>
       </div>
       <div class="col-sm-6">
