Create new footer

--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="jumbotron mt-5">
+  <div class="jumbotron mt-5 mb-5">
     <div class="row">
       <div class="col-sm-6">
         <h5 class="mb-3">Let's Play!</h5>
@@ -33,3 +33,4 @@
     </div>
   </div>
 </div>
+
