--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<main>
 <app-header></app-header>
 
 <div *ngIf="gameInProgress; else endGame">
@@ -31,3 +32,5 @@
     </div>
   </div>
 </ng-template>
+</main>
+<footer><app-footer></app-footer></footer>
