Change CSS styles - painel component

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 .navbar{
-  background-color: #1CB0F6!important;
+  background-color: #004085!important;
   color: #fff!important;
+  font-weight: 100;
 }
 
 .header--flag{
