--- a/src/app/components/painel/painel.component.html
+++ b/src/app/components/painel/painel.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="jumbotron mt-5 mb-5">
+  <div class="jumbotron painel__background mt-5 mb-5">
     <div class="row">
       <div class="col-sm-6">
-        <h5 class="mb-3">Let's Play!</h5>
+        <h5 class="mb-3">Let's <b>Play!</b></h5>
         <app-progress [progress]="progress"></app-progress>
       </div>
       <div class="col-sm-6">
